--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -17,4 +17,8 @@ hidden = false
 enable = true
 
 [keys.normal]
+S-left = "select_prev_sibling"
+S-right = "select_next_sibling"
+S-up = "expand_selection"
+S-down = "shrink_selection"
 "H" = ":toggle lsp.display-inlay-hints"
