--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -17,9 +17,15 @@ hidden = false
 enable = true
 
 [keys.normal]
+# save on escape
 esc = ":update"
+
+# move through jumplist ("history")
+h = "jump_backward"
+H = "jump_forward"
+
+# shift-arrows to traverse syntax-tree
 S-left = "select_prev_sibling"
 S-right = "select_next_sibling"
 S-up = "expand_selection"
 S-down = "shrink_selection"
-"H" = ":toggle lsp.display-inlay-hints"
