helix: add emacs-based vhdl formatter

--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -1,2 +1,6 @@
 [language-server.rust-analyzer]
 config = { check = { command = "clippy" } }
+
+[[language]]
+name = "vhdl"
+formatter = { command = "vhdl_fmt.sh" }
