--- a/dot_local/share/applications/zellij.desktop
+++ b/dot_local/share/applications/zellij.desktop
@@ -1,5 +1,6 @@
 [Desktop Entry]
 Name=Zellij
 Exec=alacritty --command fish '-c zellij'
-Icon=alacritty
+Icon=zellij
 Type=Application
+Keywords=terminal;
