hyprland: use fuzzel as app launcher

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -24,8 +24,7 @@ exec-once = syncthing serve --no-browser --logfile=default --no-default-folder
 
 $terminal = alacritty
 $fileManager = nautilus
-# --normal-window is workaround for crash, try to remove at some point
-$menu = wofi --show drun --normal-window
+$menu = fuzzel
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
