hyprland: setup swaybg

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -14,6 +14,7 @@ source = ~/.config/hypr/monitors.conf
 # however, the gnome one is working fine so far and looks better.
 exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
 
+exec-once = swaybg --mode fill --image /usr/share/backgrounds/f34/default/f34.png
 exec-once = dunst
 # exec-once = waybar
 # exec-once = wlsunset -t 3000
@@ -58,7 +59,7 @@ general {
     # col.active_border = rgb(ffaa44) # light-orange
     # col.active_border = rgb(888888) # gray
     # col.inactive_border = rgba(595959aa)
-    col.inactive_border = rgba(22222200)
+    col.inactive_border = rgba(222222ff)
 
     layout = dwindle
 
@@ -71,7 +72,7 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 2
+    rounding = 0
 
     blur {
         enabled = false
