hyprland: add swayidle and swaylock

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -15,6 +15,7 @@ source = ~/.config/hypr/monitors.conf
 exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
 
 exec-once = swaybg --mode fill --image /usr/share/backgrounds/f34/default/f34.png
+exec-once = swayidle -w timeout 1200 'swaylock -f -c 000000' before-sleep 'swaylock -f -c 000000'
 exec-once = dunst
 # exec-once = waybar
 # exec-once = wlsunset -t 3000
@@ -171,6 +172,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, Super_L, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, L, exec, swaylock -f -c 18181b
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
