--- a/dot_config/fontconfig/fonts.conf
+++ b/dot_config/fontconfig/fonts.conf
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
   <!-- https://github.com/alacritty/alacritty/issues/153#issuecomment-1030653239 -->
@@ -23,4 +23,19 @@
     </prefer>
   </alias>
 
+  <!-- https://unix.stackexchange.com/questions/714723/how-to-override-terminal-font-family-for-specific-glyph -->
+  <match target="scan">
+    <test name="family" compare="contains">
+      <string>Emoji</string>
+    </test>
+    <edit name="charset" mode="assign" binding="same">
+      <minus>
+        <name>charset</name>
+        <charset>
+          <!-- the symbol helix uses for soft-wrapping. emoji looks goofy. -->
+          <int>0x21aa</int> <!-- ↪  -->
+        </charset>
+      </minus>
+    </edit>
+  </match>
 </fontconfig>
