--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -17,6 +17,9 @@ add_newline = false
 [username]
 format = "[$user]($style) "
 
+[directory]
+truncation_length = 1
+
 [git_branch]
 style = "bold green"
 format = '[$branch ]($style)'
