--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -1,8 +1,8 @@
-import = ["~/.config/alacritty/themes/vscode.toml"]
+# import = ["~/.config/alacritty/themes/vscode.toml"]
 live_config_reload = true
 
-[colors]
-draw_bold_text_with_bright_colors = true
+# [colors]
+# draw_bold_text_with_bright_colors = true
 
 [font.normal]
 family = "RobotoMono Nerd Font"
