--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -4,6 +4,7 @@ theme = "kanagawa"
 scrolloff = 256 # big number -> cursor always centered
 line-number = "relative"
 bufferline = "multiple"
+mouse = false
 
 [editor.cursor-shape]
 insert = "bar"
