hyprland: touchup config

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -67,7 +67,7 @@ general {
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    cursor_inactive_timeout = 3
+    cursor_inactive_timeout = 2
 }
 
 decoration {
@@ -124,7 +124,7 @@ dwindle {
 
     # make single window "fullscreen"
     # (default: disabled - 0) no border - 1, with border - 2
-    no_gaps_when_only = 0
+    no_gaps_when_only = 1
 }
 
 master {
@@ -165,11 +165,11 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
-bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT, Q, exit,
+bind = $mainMod, C, killactive,
+bind = $mainMod, Q, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, Super_L, exec, $menu
+bind = $mainMod, F, togglefloating,
+bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, swaylock -f -c 18181b
@@ -199,8 +199,8 @@ bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, m+1
-bind = $mainMod, mouse_up, workspace, m-1
+bind = $mainMod, mouse_down, workspace, m-1
+bind = $mainMod, mouse_up, workspace, m+1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -217,4 +217,4 @@ bind=,XF86MonBrightnessDown,exec,brightnessctl --min-value=1 set 10%-
 bind=,XF86MonBrightnessUp,exec,brightnessctl set +10%
 
 # would prefer screenshots dir to be be lowercase, but need Gnome compat for now
-bind =, Print, exec, grim -g "$(slurp)" $(xdg-user-dir PICTURES)/Screenshots/$(date +%Y-%m-%dT%H:%M:%S%Z).png
+bind =, Print, exec, grim -g "$(slurp)" "$(xdg-user-dir PICTURES)/Screenshots/Screenshot from $(date "+%Y-%m-%d %H-%M-%S").png"
