hyprland: use wofi as app launcher
fuzzel is slow, janky and ugly

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ exec-once = syncthing serve --no-browser --logfile=default --no-default-folder
 
 $terminal = alacritty
 $fileManager = nautilus
-$menu = fuzzel
+$menu = wofi --show drun
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
