hyprland: improve keybindings

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -163,37 +163,34 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, T, exec, $terminal --command fish '-c zellij'
-bind = $mainMod, I, exec, $terminal --command fish '-c ide'
-bind = $mainMod, S, exec, [workspace +0; float] $terminal
-bind = $mainMod, C, killactive,
+bind = $mainMod, K, killactive,
 bind = $mainMod, Q, exit,
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, F, togglefloating,
-bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, V, togglefloating,
+bind = $mainMod, P, pseudo, # dwindle (kinda useless?)
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, swaylock -f -c 18181b
+bind = $mainMod, A, exec, $menu
+bind = $mainMod CTRL, S, exec, [workspace +0; float] $terminal
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+# Move focus with mainMod + "arrow keys" on main layer
+bind = $mainMod, R, movefocus, l
+bind = $mainMod, T, movefocus, r
+bind = $mainMod, F, movefocus, u
+bind = $mainMod, S, movefocus, d
 
-# Move window with mainMod + SHIFT + arrow keys
-bind = $mainMod SHIFT, left, movewindow, l
-bind = $mainMod SHIFT, right, movewindow, r
-bind = $mainMod SHIFT, up, movewindow, u
-bind = $mainMod SHIFT, down, movewindow, d
+# Move window with mainMod + arrow keys (on nav layer)
+bind = $mainMod, left, movewindow, l
+bind = $mainMod, right, movewindow, r
+bind = $mainMod, up, movewindow, u
+bind = $mainMod, down, movewindow, d
 
-# Switch workspaces with mainMod + Page{Up,Down}
-bind = $mainMod, Prior, workspace, m-1
-bind = $mainMod, Next, workspace, m+1
+# Switch workspaces with mainMod + "Page{Up,Down}" on main layer
+bind = $mainMod, X, workspace, m-1
+bind = $mainMod, D, workspace, m+1
 
-# Move active window between workspaces with mainMod + SHIFT + Page{Up,Down}
-bind = $mainMod SHIFT, Prior, movetoworkspace, r-1
-bind = $mainMod SHIFT, Next, movetoworkspace, r+1
+# Move active window between workspaces with mainMod + Page{Up,Down} (on nav layer)
+bind = $mainMod, Prior, movetoworkspace, r-1
+bind = $mainMod, Next, movetoworkspace, r+1
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, m-1
