hyprland: improve keybinds for opening terminals

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -163,7 +163,9 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, T, exec, $terminal
+bind = $mainMod, T, exec, $terminal --command fish '-c zellij'
+bind = $mainMod, I, exec, $terminal --command fish '-c ide'
+bind = $mainMod, S, exec, [workspace +0; float] $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, Q, exit,
 bind = $mainMod, E, exec, $fileManager
@@ -192,10 +194,6 @@ bind = $mainMod, Next, workspace, m+1
 # Move active window between workspaces with mainMod + SHIFT + Page{Up,Down}
 bind = $mainMod SHIFT, Prior, movetoworkspace, r-1
 bind = $mainMod SHIFT, Next, movetoworkspace, r+1
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, m-1
