--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -4,5 +4,8 @@ live_config_reload = true
 # [colors]
 # draw_bold_text_with_bright_colors = true
 
+[font.normal]
+family = "RobotoMono Nerd Font"
+
 [window]
 decorations = "none"
