--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -2,7 +2,7 @@ theme = "kanagawa"
 
 [editor]
 scrolloff = 256 # big number -> cursor always centered
-line-number = "relative"
+line-number = "absolute"
 bufferline = "multiple"
 mouse = false
 
