add screenshot editor swappy

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -211,4 +211,6 @@ bind=,XF86MonBrightnessDown,exec,brightnessctl --min-value=1 set 10%-
 bind=,XF86MonBrightnessUp,exec,brightnessctl set +10%
 
 # would prefer screenshots dir to be be lowercase, but need Gnome compat for now
+# file format is duplicated in swappy config
 bind =, Print, exec, grim -g "$(slurp)" "$(xdg-user-dir PICTURES)/Screenshots/Screenshot from $(date "+%Y-%m-%d %H-%M-%S").png"
+bind = SHIFT, Print, exec, grim -g "$(slurp)" - | swappy -f -
