--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -14,8 +14,8 @@ source = ~/.config/hypr/monitors.conf
 # however, the gnome one is working fine so far and looks better.
 exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
 
-exec-once = swaybg --mode fill --image /usr/share/backgrounds/f34/default/f34.png
-exec-once = swayidle -w timeout 1200 'swaylock -f -c 000000' before-sleep 'swaylock -f -c 000000'
+exec-once = hyprpaper
+exec-once = hypridle
 exec-once = dunst
 # exec-once = wlsunset -t 3000
 
@@ -168,7 +168,7 @@ bind = $mainMod, Q, exit,
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle (kinda useless?)
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, L, exec, swaylock -f -c 18181b
+bind = $mainMod, L, exec, loginctl lock-session
 bind = $mainMod, A, exec, $menu
 bind = $mainMod CTRL, S, exec, [workspace +0; float] $terminal
 
