hyprland: add monitor rotation keybind

--- a/dot_config/hypr/monitors.example.conf
+++ b/dot_config/hypr/monitors.example.conf
@@ -3,12 +3,14 @@
 # format:
 # monitor = name, resolution, position, scale (, [ "transform",[1|2|3] | "mirror",monitor ] )
 
+# anchor point for scripted rotation changes, see rotate_monitor.sh
+$rotation = 0
+
 # framework
-# monitor = eDP-1, preferred, auto, 1.5
+# monitor = eDP-1, preferred, auto, 1.5, transform,$rotation
 
 # desktop
-# monitor = HDMI-A-1, preferred, 0x0,  1.33
-# monitor =         , preferred, auto, 1.33
+# monitor = DP-2, 3840x2160@240, auto, auto
 
 # work
 # monitor = DP-3, preferred, 0x0,        auto
