--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -171,6 +171,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, loginctl lock-session
 bind = $mainMod, A, exec, $menu
 bind = $mainMod CTRL, S, exec, [workspace +0; float] $terminal
+bind = $mainMod, O, exec, fish -c rotate_monitor.sh # orientation
 
 # Move focus with mainMod + "arrow keys" on main layer
 bind = $mainMod, R, movefocus, l
