hyprland: add suspend keybind

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -172,6 +172,7 @@ bind = $mainMod, L, exec, loginctl lock-session
 bind = $mainMod, A, exec, $menu
 bind = $mainMod CTRL, S, exec, [workspace +0; float] $terminal
 bind = $mainMod, O, exec, fish -c rotate_monitor.sh # orientation
+bind = $mainMod, U, exec, systemctl suspend # "usleep"
 
 # Move focus with mainMod + "arrow keys" on main layer
 bind = $mainMod, R, movefocus, l
