hyprland: fix framework scaling

--- a/dot_config/hypr/monitors.example.conf
+++ b/dot_config/hypr/monitors.example.conf
@@ -7,7 +7,7 @@
 $rotation = 0
 
 # framework
-# monitor = eDP-1, preferred, auto, 1.5, transform,$rotation
+monitor = eDP-1, preferred, auto, 1.5, transform,$rotation
 
 # desktop
 # monitor = DP-2, 3840x2160@240, auto, auto
