--- a/dot_config/VSCodium/User/settings.json
+++ b/dot_config/VSCodium/User/settings.json
@@ -54,6 +54,7 @@
   "files.exclude": {
     "**/.classpath": true,
     "**/.factorypath": true,
+    "**/.jj": true,
     "**/.project": true,
     "**/.settings": true
   },
