--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -166,7 +166,7 @@ $mainMod = SUPER
 bind = $mainMod, K, killactive,
 bind = $mainMod, Q, exit,
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, P, pseudo, # dwindle (kinda useless?)
+# bind = $mainMod, P, pseudo, # dwindle (kinda useless?), conflicts with printscreen
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, loginctl lock-session
 bind = $mainMod, A, exec, $menu
@@ -214,5 +214,5 @@ bind=,XF86MonBrightnessUp,exec,brightnessctl set +10%
 
 # would prefer screenshots dir to be be lowercase, but need Gnome compat for now
 # file format is duplicated in swappy config
-bind =, Print, exec, grim -g "$(slurp)" "$(xdg-user-dir PICTURES)/Screenshots/Screenshot from $(date "+%Y-%m-%d %H-%M-%S").png"
-bind = SHIFT, Print, exec, grim -g "$(slurp)" - | swappy -f -
+bind = $mainMod, P, exec, grim -g "$(slurp)" "$(xdg-user-dir PICTURES)/Screenshots/Screenshot from $(date "+%Y-%m-%d %H-%M-%S").png"
+bind = $mainMod CTRL, P, exec, grim -g "$(slurp)" - | swappy -f -
