hyprland: update volume control keybinds

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -174,6 +174,21 @@ bind = $mainMod CTRL, S, exec, [workspace +0; float] $terminal
 bind = $mainMod, O, exec, fish -c rotate_monitor.sh # orientation
 bind = $mainMod, U, exec, systemctl suspend # "usleep"
 
+# would prefer screenshots dir to be be lowercase, but need Gnome compat for now
+# file format is duplicated in swappy config
+bind = $mainMod, P, exec, grim -g "$(slurp)" "$(xdg-user-dir PICTURES)/Screenshots/Screenshot from $(date "+%Y-%m-%d %H-%M-%S").png"
+bind = $mainMod CTRL, P, exec, grim -g "$(slurp)" - | swappy -f -
+
+# sound volume
+# (bindl will activate even while an input inhibitor is active)
+bindl= $mainMod, N, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindl= $mainMod, E, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bind = $mainMod, I, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
+
+# screen brightness
+bind=,XF86MonBrightnessDown,exec,brightnessctl --min-value=1 set 10%-
+bind=,XF86MonBrightnessUp,exec,brightnessctl set +10%
+
 # Move focus with mainMod + "arrow keys" on main layer
 bind = $mainMod, R, movefocus, l
 bind = $mainMod, T, movefocus, r
@@ -201,18 +216,3 @@ bind = $mainMod, mouse_up, workspace, m+1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
-# sound volume
-bind=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
-# will activate even while an input inhibitor is active
-bindl=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindl=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-
-# screen brightness
-bind=,XF86MonBrightnessDown,exec,brightnessctl --min-value=1 set 10%-
-bind=,XF86MonBrightnessUp,exec,brightnessctl set +10%
-
-# would prefer screenshots dir to be be lowercase, but need Gnome compat for now
-# file format is duplicated in swappy config
-bind = $mainMod, P, exec, grim -g "$(slurp)" "$(xdg-user-dir PICTURES)/Screenshots/Screenshot from $(date "+%Y-%m-%d %H-%M-%S").png"
-bind = $mainMod CTRL, P, exec, grim -g "$(slurp)" - | swappy -f -
