hyprland: reduce accidental logouts

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -164,7 +164,7 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, K, killactive,
-bind = $mainMod, Q, exit,
+bind = $mainMod CTRL, Q, exit,
 bind = $mainMod, V, togglefloating,
 # bind = $mainMod, P, pseudo, # dwindle (kinda useless?), conflicts with printscreen
 bind = $mainMod, J, togglesplit, # dwindle
