update hyprland monitor config
Since the monitor IDs luckily don't overlap, there is no disadvantage to
having them all uncommented.

--- a/dot_config/hypr/monitors.example.conf
+++ b/dot_config/hypr/monitors.example.conf
@@ -10,12 +10,12 @@ $rotation = 0
 monitor = eDP-1, preferred, auto, 1.5, transform,$rotation
 
 # desktop
-# monitor = DP-2, 3840x2160@240, auto, auto
+monitor = DP-2, 3840x2160@240, auto, auto
 
 # work
-# monitor = DP-3, preferred, 0x0,        auto
-# monitor = DP-4, preferred, auto,       auto
-# monitor = DP-6, preferred, -1440x-570  , auto, transform,1
+monitor = DP-3, preferred, 0x0,        auto
+monitor = DP-4, preferred, auto,       auto
+monitor = DP-6, preferred, -1440x-570  , auto, transform,1
 
 # default
 monitor = , preferred, auto, auto
