hyprland: put screenshots in file and clipboard

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -177,7 +177,7 @@ bind = $mainMod, E, exec, fish -c wofi_emoji.sh
 
 # would prefer screenshots dir to be be lowercase, but need Gnome compat for now
 # file format is duplicated in swappy config
-bind = $mainMod, P, exec, grim -g "$(slurp)" "$(xdg-user-dir PICTURES)/Screenshots/Screenshot from $(date "+%Y-%m-%d %H-%M-%S").png"
+bind = $mainMod, P, exec, grim -g "$(slurp)" - | tee "$(xdg-user-dir PICTURES)/Screenshots/Screenshot from $(date "+%Y-%m-%d %H-%M-%S").png" | wl-copy
 bind = $mainMod CTRL, P, exec, grim -g "$(slurp)" - | swappy -f -
 
 # sound volume
