hyprland: fix emoji-picker keybind

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -173,7 +173,7 @@ bind = $mainMod, A, exec, $menu
 bind = $mainMod CTRL, S, exec, [workspace +0; float] $terminal
 bind = $mainMod, O, exec, fish -c rotate_monitor.sh # orientation
 bind = $mainMod, U, exec, systemctl suspend # "usleep"
-bind = $mainMod, E, exec, fish -c wofi_emoji.sh
+bind = $mainMod, Y, exec, fish -c wofi_emoji.sh
 
 # would prefer screenshots dir to be be lowercase, but need Gnome compat for now
 # file format is duplicated in swappy config
