--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -182,9 +182,12 @@ bind = $mainMod CTRL, P, exec, grim -g "$(slurp)" - | swappy -f -
 
 # sound volume
 # (bindl will activate even while an input inhibitor is active)
-bindl= $mainMod, N, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindl= $mainMod, E, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bind = $mainMod, I, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
+bindl= $mainMod, N,           exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindl= $mainMod, E,           exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bind = $mainMod, I,           exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
+bindl=, XF86AudioMute,        exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindl=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bind =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
 
 # screen brightness
 bind=,XF86MonBrightnessDown,exec,brightnessctl --min-value=1 set 10%-
