--- a/dot_cargo/config.toml
+++ b/dot_cargo/config.toml
@@ -2,13 +2,10 @@
 nt = "nextest run --final-status-level slow"
 gen = "generate"
 
-[registries.crates-io]
-credential-provider = ["cargo:token-from-stdout", "bash", "-c", """
-printf "token "
-op read op://Personal/ncskkq6uqseteemqviapuisrbe/token
-"""]
+[registry]
+global-credential-providers = ["cargo:token-from-stdout op read op://Personal/ncskkq6uqseteemqviapuisrbe/token"]
 
-[registries.forgejo]
+[registries.buenzli-dev]
 # index = "sparse+https://git.buenzli.dev/api/packages/senekor/cargo/"
 credential-provider = ["cargo:token-from-stdout", "bash", "-c", """
 printf "token "
