hyprland: set dark GTK theme

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -29,6 +29,7 @@ $menu = wofi --show drun
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
+env = GTK_THEME,adw-gtk3-dark
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
