--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -5,6 +5,7 @@ scrolloff = 256 # big number -> cursor always centered
 line-number = "absolute"
 bufferline = "multiple"
 mouse = false
+true-color = true
 
 [editor.cursor-shape]
 insert = "bar"
