helix: more automatic file saving

--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -49,7 +49,8 @@ h = "hsplit"              # "save" -> "history"
 p = "rotate_view_reverse" # counterpart of <space>ww
 
 [keys.insert]
-C-h = "commit_undo_checkpoint" # "save" -> "history"
+esc = ["normal_mode", ":update"]
+C-h = ["commit_undo_checkpoint", ":update"] # "save" -> "history"
 
 #### "save" -> "history"
 # remapping currently not supported, don't care anyway
