--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -3,6 +3,7 @@ config.check.command = "clippy"
 
 [language-server.pylsp.config.pylsp.plugins]
 pycodestyle.maxLineLength = 120
+mccabe.enabled = false # cyclomatic complexity
 
 [[language]]
 name = "vhdl"
