helix: add link to pylsp config docs

--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -4,6 +4,8 @@ config.check.command = "clippy"
 [language-server.pylsp.config.pylsp.plugins]
 pycodestyle.maxLineLength = 120
 mccabe.enabled = false # cyclomatic complexity
+# more pylsp config options:
+# https://github.com/python-lsp/python-lsp-server/blob/develop/CONFIGURATION.md
 
 [[language]]
 name = "vhdl"
