hx: disable auto-pairs
The default behavior has too many "false positives". Maybe in the future LSPs
will somehow provide more meaningful auto-pair functionality.

--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -6,6 +6,7 @@ line-number = "absolute"
 bufferline = "multiple"
 mouse = false
 true-color = true
+auto-pairs = false
 
 [editor.cursor-shape]
 insert = "bar"
