hx: don't write file when exiting insert mode

--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -58,8 +58,7 @@ h = "hsplit"              # "save" -> "history"
 p = "rotate_view_reverse" # counterpart of <space>ww
 
 [keys.insert]
-esc = ["normal_mode", ":update"]
-C-h = ["commit_undo_checkpoint", ":update"] # "save" -> "history"
+C-h = "commit_undo_checkpoint" # "save" -> "history"
 
 #### "save" -> "history"
 # remapping currently not supported, don't care anyway
