hyprland: fix config for fedora 41

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -67,7 +67,10 @@ general {
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    cursor_inactive_timeout = 2
+}
+
+cursor {
+    inactive_timeout = 2
 }
 
 decoration {
@@ -125,11 +128,6 @@ dwindle {
     # make single window "fullscreen"
     # (default: disabled - 0) no border - 1, with border - 2
     no_gaps_when_only = 1
-}
-
-master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
 }
 
 gestures {
