add hyprfocus plugin to hyprland
gotta save those 2 border pixels

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -2,6 +2,8 @@
 monitor=,preferred,auto,auto
 source = ~/.config/hypr/monitors.conf
 
+source = ~/.config/hypr/hyprfocus.conf
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # authentication agent, see:
@@ -18,6 +20,7 @@ exec-once = hyprpaper
 exec-once = hypridle
 exec-once = dunst
 # exec-once = wlsunset -t 3000
+exec-once = hyprpm reload --notify
 
 # TODO better way to reuse .config/autostart
 exec-once = 1password --silent
@@ -54,7 +57,7 @@ general {
 
     gaps_in = 0
     gaps_out = 0
-    border_size = 2
+    border_size = 3
     # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg # default
     col.active_border = rgb(ff6f00) rgb(b600ff) 45deg # orange-purple
     # col.active_border = rgb(ffaa44) # light-orange
@@ -68,6 +71,9 @@ general {
     allow_tearing = false
 
 }
+
+windowrulev2 = noborder on, floating:0
+windowrulev2 = rounding 4, floating:1
 
 cursor {
     inactive_timeout = 2
