hyprland: disable hyprpaper
hyprfocus flash animation looks weird with non-uniform wallpaper

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ source = ~/.config/hypr/hyprfocus.conf
 # however, the gnome one is working fine so far and looks better.
 exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
 
-exec-once = hyprpaper
+# exec-once = hyprpaper # dark, non-distracting background for hyprfocus
 exec-once = hypridle
 exec-once = dunst
 # exec-once = wlsunset -t 3000
