tweak hyprfocus animation

--- a/dot_config/hypr/hyprfocus.conf
+++ b/dot_config/hypr/hyprfocus.conf
@@ -4,11 +4,13 @@ plugin:hyprfocus {
     animate_workspacechange = yes # I don't know what this does
     focus_animation = flash
     bezier = linear, 0.5,0.5,0.5,0.5
+    fastIn = linear, 0,1,0,1
+    fastIn = linear, 1,0,1,0
     flash {
         flash_opacity = 0.5
-        in_bezier = linear
-        in_speed = 0.7
-        out_bezier = linear
-        out_speed = 0.7
+        in_bezier = fastIn
+        in_speed = 0.5
+        out_bezier = fastOut
+        out_speed = 0.5
     }
 }
