hyprland: disable scaling of xwayland apps
Scaled xwayland apps are always blurry. The solution is to force
individual apps to run in wayland mode if they can or maybe set an
in-app scaling factor.

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -164,6 +164,10 @@ device {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
+xwayland {
+  force_zero_scaling = true
+}
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
