--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -1,3 +1,4 @@
+[general]
 # import = ["~/.config/alacritty/themes/vscode.toml"]
 # import = ["~/.config/alacritty/themes/github_light_high_contrast.toml"]
 
