hyprland: launch terminal at startup

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -30,6 +30,10 @@ $terminal = alacritty
 $fileManager = nautilus
 $menu = wofi --show drun
 
+# We need to start _some_ app in the foreground to signal that the system has
+# booted... because the wallpaper is black.
+exec-once = [workspace +0; float] $terminal
+
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = GTK_THEME,adw-gtk3-dark
