hyprland: update example monitor config

--- a/dot_config/hypr/monitors.example.conf
+++ b/dot_config/hypr/monitors.example.conf
@@ -13,9 +13,9 @@ monitor = eDP-1, preferred, auto, 1.5, transform,$rotation
 monitor = DP-2, 3840x2160@240, auto, auto
 
 # work
-monitor = DP-3, preferred, 0x0,        auto
-monitor = DP-4, preferred, auto,       auto
-monitor = DP-6, preferred, -1440x-570  , auto, transform,1
+monitor = DP-1, preferred, 0x0,        auto
+monitor = DP-2, preferred, auto,       auto
+monitor = HDMI-A-1, preferred, -1440x-570  , auto, transform,1
 
-# default
-monitor = , preferred, auto, auto
+# default, mirror laptop display
+monitor = , preferred, auto, 1, mirror, eDP-1
