--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -41,6 +41,8 @@ S-left = "select_prev_sibling"  # shift-arrows to traverse syntax-tree
 S-right = "select_next_sibling" # shift-arrows to traverse syntax-tree
 S-up = "expand_selection"       # shift-arrows to traverse syntax-tree
 S-down = "shrink_selection"     # shift-arrows to traverse syntax-tree
+"{" = "rotate_selection_contents_backward"
+"}" = "rotate_selection_contents_forward"
 
 [keys.select]
 j = "flip_selections" # "juxtapose"
