hyprland: use mate-polkit for system auth

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -7,14 +7,12 @@ source = ~/.config/hypr/hyprfocus.conf
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # authentication agent, see:
-# https://wiki.hyprland.org/Useful-Utilities/Must-have/#authentication-agent
+# https://wiki.hyprland.org/Hypr-Ecosystem/hyprpolkitagent/
 #
-# recommended is the KDE one:
-# dnf install polkit-kde
-# exec-once = /usr/libexec/kf5/polkit-kde-authentication-agent-1
-#
-# however, the gnome one is working fine so far and looks better.
-exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
+# hyprpolkitagent is not (yet) available in Fedora's repos.
+# I used polkit-gnome in the past, but that was removed in Fedora 41.
+# mate-polkit seems to work the same way.
+exec-once = /usr/libexec/polkit-mate-authentication-agent-1
 
 # exec-once = hyprpaper # dark, non-distracting background for hyprfocus
 exec-once = hypridle
