hyprland: update example monitor config

--- a/dot_config/hypr/monitors.example.conf
+++ b/dot_config/hypr/monitors.example.conf
@@ -7,7 +7,8 @@
 $rotation = 0
 
 # framework
-monitor = eDP-1, preferred, auto, 1.5, transform,$rotation
+monitor = eDP-1, preferred, auto, 1.566, transform,$rotation
+# monitor = DP-4,  preferred, auto, auto # home monitor
 
 # desktop
 monitor = DP-2, 3840x2160@240, auto, auto
@@ -19,3 +20,6 @@ monitor = HDMI-A-1, preferred, -1440x-570  , auto, transform,1
 
 # default, mirror laptop display
 monitor = , preferred, auto, 1, mirror, eDP-1
+
+# default, additional monitor
+# monitor = , preferred, auto, auto
