alacritty: add dayfox theme
intended as a light theme for presentations

--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -1,6 +1,7 @@
 [general]
 # import = ["~/.config/alacritty/themes/vscode.toml"]
 # import = ["~/.config/alacritty/themes/github_light_high_contrast.toml"]
+# import = ["~/.config/alacritty/themes/dayfox.toml"]
 
 live_config_reload = true
 
