--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -9,7 +9,7 @@ live_config_reload = true
 # draw_bold_text_with_bright_colors = true
 
 [font.normal]
-family = "RobotoMono Nerd Font"
+family = "Roboto Mono"
 
 [window]
 decorations = "none"
