--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -39,7 +39,7 @@ env = GTK_THEME,adw-gtk3-dark
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
-    kb_variant = de_se_fi
+    kb_variant = de_se_fi # see /usr/share/X11/xkb/symbols/us
     kb_model =
     kb_options =
     kb_rules =
