--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -35,6 +35,9 @@ exec-once = [workspace +0; float] $terminal
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = GTK_THEME,adw-gtk3-dark
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
