improve organization of repositories
The previous (~/repos/$repo_name) had drawbacks:
- There could be name clashes, e.g. rust-lang/rust & exercism/rust.
- Domain & owner specific repo configuration is difficult.
  (have to use chezmoi, templating, 1Password...)

The new scheme (~/repos/$domain/$owner/$repo_name) fixes these issues:
- No more name clashes.
- Granular config is easier. Just put it in the directory ($domain/config or
  $owner/config) and copy/append that to repo config while cloning.
  Scripting is still required (see clone.nu).
  -> I added a domain-specific push-prefix for jj because it's easier now.

I also want to move away from storing templating data in 1Password, _unless_
it's actually a secret. Emails, repos to clone etc. aren't secret. I don't like
the fact that this data is not actually under version control. And it's a worse
editing experience. My dislike for this system made me avoid some customization
in the past.

--- a/.helix/languages.toml
+++ b/.helix/languages.toml
@@ -14,7 +14,7 @@ file-types = [
   { glob = ".gitconfig" },
   { glob = ".git/config" },
   { glob = ".config/git/config" },
-  { glob = "git/config.tmpl" },
+  { glob = "git/config" },
 ]
 [[language]]
 name = "sshclientconfig"
