--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -10,3 +10,21 @@ mccabe.enabled = false # cyclomatic complexity
 [[language]]
 name = "vhdl"
 formatter.command = "vhdl_fmt.sh"
+
+[[language]]
+name = "typescript"
+language-id = "typescript"
+scope = "source.ts"
+injection-regex = "^(ts|typescript)$"
+file-types = ["ts"]
+shebangs = ["deno"]
+roots = ["deno.json", "deno.jsonc", "package.json"]
+auto-format = true
+language-servers = ["deno-lsp"]
+
+[language-server.deno-lsp]
+command = "deno"
+args = ["lsp"]
+
+[language-server.deno-lsp.config.deno]
+enable = true
