hypr: add bind to flash focused window

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -208,6 +208,8 @@ bind = $mainMod, R, movefocus, l
 bind = $mainMod, T, movefocus, r
 bind = $mainMod, F, movefocus, u
 bind = $mainMod, S, movefocus, d
+# flash currently focused window
+bind = $mainMod, space, animatefocused
 
 # Move window with mainMod + arrow keys (on nav layer)
 bind = $mainMod, left, movewindow, l
