--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -8,6 +8,12 @@ mouse = false
 true-color = true
 auto-pairs = false
 
+# TODO: Once there is a stable helix release with inline diagnostics,
+# check if the defaults are good, i.e. this section can be removed.
+[editor.inline-diagnostics]
+cursor-line = "hint" # error, warning, info, hint
+other-lines = "error"
+
 [editor.cursor-shape]
 insert = "bar"
 normal = "block"
