--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -13,35 +13,17 @@ formatter.command = "vhdl_fmt.sh"
 
 [[language]]
 name = "typescript"
-scope = "source.ts"
-injection-regex = "(ts|typescript)"
-language-id = "typescript"
-file-types = ["ts", "mts", "cts"]
-shebangs = ["deno"]
 roots = ["deno.json", "deno.jsonc", "package.json"]
-comment-token = "//"
-block-comment-tokens = { start = "/*", end = "*/" }
-indent = { tab-width = 2, unit = "  " }
 auto-format = true
 language-servers = ["deno-lsp"]
 
 [[language]]
 name = "javascript"
-scope = "source.js"
-injection-regex = "(js|javascript)"
-language-id = "javascript"
-file-types = ["js", "mjs", "cjs", "rules", "es6", "pac", { glob = ".node_repl_history" }, { glob = "jakefile" }]
-shebangs = ["deno"]
 roots = ["deno.json", "deno.jsonc", "package.json"]
-comment-token = "//"
-block-comment-tokens = { start = "/*", end = "*/" }
-indent = { tab-width = 2, unit = "  " }
 auto-format = true
 language-servers = ["deno-lsp"]
 
 [language-server.deno-lsp]
 command = "deno"
 args = ["lsp"]
-
-[language-server.deno-lsp.config.deno]
-enable = true
+config.deno.enable = true
